browser/themes/shared/urlbar-searchbar.inc.css
/* ... */
#urlbar[breakout] > #urlbar-input-container {
  width: 100%;
  height: 100%;
}

#urlbar:not([open]) > .urlbarView,
#urlbar:not([breakout]) > .urlbarView {
  display: none;
}

#urlbar[breakout][breakout-extend],
#urlbar[breakout][breakout-extend-disabled][open] {
  

  z-index: 3;
  height: auto;
}

#urlbar[breakout][breakout-extend] {
  top: -@urlbarBreakoutExtend@;
  left: calc(-@urlbarMarginInline@ - @urlbarBreakoutExtend@);
  width: calc(100% + 2 * @urlbarMarginInline@ + 2 * @urlbarBreakoutExtend@);
}

#urlbar[breakout][breakout-extend] > #urlbar-background {
  box-shadow: 0 3px 8px 0 rgba(0,0,0,.15)
}

#urlbar[breakout][breakout-extend][open] > #urlbar-background {
  box-shadow: 0 5px 18px rgba(0,0,0,.2);
}

#urlbar[breakout][breakout-extend] > #urlbar-input-container {
  height: calc(var(--urlbar-toolbar-height) + 2 * @urlbarBreakoutExtend@);
  padding-block: calc(@urlbarBreakoutExtend@ + (var(--urlbar-toolbar-height) - var(--urlbar-height)) / 2);
  padding-inline: calc(@urlbarMarginInline@ + @urlbarBreakoutExtend@);
}

#urlbar.searchButton[breakout][breakout-extend] > #urlbar-input-container > #urlbar-search-button {
  fill: currentColor;
  fill-opacity: .6;
}

@keyframes urlbar-grow {
  0% {
    transform: scaleX(.99) scaleY(.95);
  }
  100% {
    transform: scale(1.0);
  }
}

#urlbar[breakout][breakout-extend] > #urlbar-background {
  animation-name: urlbar-grow;
  animation-duration: 0s;
  animation-timing-function: var(--animation-easing-function);
}

@media (prefers-reduced-motion: no-preference) {
  #urlbar[breakout][breakout-extend][breakout-extend-animate] > #urlbar-background {
    animation-duration: 150ms;
  }
}

:root[uidensity=compact] #urlbar,
:root[uidensity=compact] #searchbar {
  min-height: 26px;
}

:root[uidensity=touch] #urlbar,
:root[uidensity=touch] #searchbar {
  min-height: 32px;
}

:root[chromehidden~="toolbar"] #urlbar-container {
  
  padding-inline-end: 0;
}

:root[customizing] .urlbar-input-box {
  visibility: hidden;
}

#urlbar-container {
  -moz-box-align: center;
}

#urlbar-search-splitter {
  

  min-width: 12px;
  margin: 0 -6px;
  position: relative;
  border: none;
  background: transparent;
  appearance: none;
}


#urlbar-search-mode-indicator {
  display: none;
  background-color: #d6ebff;
  outline: 1px solid #0060df; 
  -moz-outline-radius: 2px;
  margin-inline-end: 8px;
  min-width: 16px; 
  align-items: center;
}

#urlbar[searchmode][breakout-extend] > #urlbar-input-container > #urlbar-search-mode-indicator {
  display: inline-flex;
}

#urlbar-search-mode-indicator-title {
  color: #0060df; 
  padding-inline: 5px;
}

#urlbar-search-mode-indicator-close {
  display: none;
  background: url(chrome://global/skin/icons/close.svg) no-repeat center;
  background-size: 100% 16px;
  width: 16px;
  height: 100%;
  margin-inline-start: -16px;
  -moz-context-properties: fill, fill-opacity, stroke-opacity;
  fill: currentColor;
  fill-opacity: 0;
  stroke-opacity: 0.6;
  background-color: var(--lwt-toolbar-field-background-color, white);
}

#urlbar-search-mode-indicator:hover  > #urlbar-search-mode-indicator-close {
  display: inline;
}

@supports -moz-bool-pref("browser.urlbar.experimental.searchModeIndicatorHover") {
  #urlbar-search-mode-indicator-close:hover {
    background-color: #ededf0; 
  }
  #urlbar-search-mode-indicator-close:hover:active {
    background-color: #d7d7db; 
  }

  :root[lwt-toolbar-field-brighttext] #urlbar-search-mode-indicator-close:hover {
    background-color: #737373; 
  }

  :root[lwt-toolbar-field-brighttext] #urlbar-search-mode-indicator-close:hover:active {
    background-color: #b1b1b3; 
  }
}


.pageAction-panel-button > .toolbarbutton-icon {
  width: 16px;
  height: 16px;
}

#pageAction-panel-bookmark,
#star-button {
  list-style-image: url("chrome://browser/skin/bookmark-hollow.svg");
}
#pageAction-panel-bookmark[starred],
#star-button[starred] {
  list-style-image: url("chrome://browser/skin/bookmark.svg");
}
#star-button[starred] {
  fill-opacity: 1;
  fill: var(--toolbarbutton-icon-fill-attention);
}

#pocket-button,
#pageAction-panel-pocket {
  list-style-image: url("chrome://browser/skin/pocket-outline.svg");
}

#pocket-button[open="true"],
#pocket-button[pocketed="true"] {
  list-style-image: url("chrome://browser/skin/pocket.svg");
  fill: #ef4056;
  fill-opacity: 1;
}

#pageAction-panel-pinTab,
#pageAction-urlbar-pinTab {
  list-style-image: url("chrome://browser/skin/pin-tab.svg");
}

#pageAction-panel-pinTab[pinned],
#pageAction-urlbar-pinTab[pinned] {
  list-style-image: url("chrome://browser/skin/unpin-tab.svg");
}

#pageAction-panel-copyURL,
#pageAction-urlbar-copyURL {
  list-style-image: url("chrome://browser/skin/link.svg");
}

#pageAction-panel-emailLink,
#pageAction-urlbar-emailLink {
  list-style-image: url("chrome://browser/skin/mail.svg");
}

#pageAction-panel-sendToDevice,
#pageAction-urlbar-sendToDevice {
  list-style-image: url("chrome://browser/skin/send-to-device.svg");
}

#pageAction-panel-pinTab:-moz-locale-dir(rtl) > .toolbarbutton-icon,
#pageAction-urlbar-pinTab:-moz-locale-dir(rtl),
#pageAction-panel-sendToDevice:-moz-locale-dir(rtl) > .toolbarbutton-icon,
#pageAction-urlbar-sendToDevice:-moz-locale-dir(rtl) {
  transform: scaleX(-1);
}

.pageAction-sendToDevice-device[clientType=phone] {
  list-style-image: url("chrome://browser/skin/device-phone.svg");
}

.pageAction-sendToDevice-device[clientType=tablet] {
  list-style-image: url("chrome://browser/skin/device-tablet.svg");
}

.pageAction-sendToDevice-device[clientType=desktop] {
  list-style-image: url("chrome://browser/skin/device-desktop.svg");
}

.pageAction-sendToDevice-device[clientType=tv] {
  list-style-image: url("chrome://browser/skin/device-tv.svg");
}

.pageAction-sendToDevice-device[clientType=vr] {
  list-style-image: url("chrome://browser/skin/device-vr.svg");
}
/* ... */

