Bug 1673011 - Make the search indicator close button background the same as the urlbar background, which fixes high-contrast mode. r=ntim
Differential Revision: https://phabricator.services.mozilla.com/D94663

UltraBlame original commit: 4b2288d37d5627f6a7c989e16ff98364e10c095d

--- a/browser/themes/shared/urlbar-searchbar.inc.css
+++ b/browser/themes/shared/urlbar-searchbar.inc.css
@@ -304,10 +304,19 @@
   height: 100%;
   margin-inline-start: -16px;
   -moz-context-properties: fill, fill-opacity, stroke-opacity;
-  fill: currentColor;
   fill-opacity: 0;
   stroke-opacity: 0.6;
-  background-color: var(--lwt-toolbar-field-background-color, white);
+  
+
+  fill: currentColor;
+  background-color: Field;
+}
+
+#urlbar-search-mode-indicator-close:-moz-lwtheme {
+  
+
+  fill: var(--lwt-toolbar-field-focus-color);
+  background-color: var(--lwt-toolbar-field-focus);
 }
 
 #urlbar-search-mode-indicator:hover  > #urlbar-search-mode-indicator-close {
